http-proxy-keda/k8s/grpc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-grpc-category
  name: go-grpc-category
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-grpc-category
  template:
    metadata:
      labels:
        app: go-grpc-category
    spec:
      containers:
      - image: zero101010/grpc-hello-word-reflection   # Edit this for your reponame
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        name: go-grpc-category
        ports:
        - containerPort: 50051
