http-proxy-keda/k8s/grpc/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-grpc-category
  name: go-grpc-category
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: go-grpc-category
  type: LoadBalancer
